<resources>
    <string name="app_name">advancedView</string>
    <string name="welcome">환영합니다.</string>
    <string name="getdata">문자열가져오기</string>
    <string name="setdata">문자열 셋팅하기</string>
    <string name="welcome1">안녕</string>
    <string name="send">전송</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="detail_info">상세정보</string>
    <string name="member_info">회원정보</string>
    <string name="menu1">로그인</string>
    <string name="menu2">회원가입</string>
    <string name="menu3">상세정보</string>
    <string name="id">id:</string>
    <string name="pw">password:</string>
    <string name="name">Name:</string>
</resources>
