<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frame_Conversion_Activity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#f8bc00"
            android:layout_weight="1"
            >
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="myclick"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
        />
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="myclick"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
        />
        <Button
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_info"
            android:onClick="myclick"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
        />
    </LinearLayout>
<FrameLayout
    android:id="@+id/frames"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    >
    <LinearLayout
        android:id="@+id/frame1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#009688"
        android:visibility="visible"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pw"
            android:inputType="textPersonName"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            />
        <TextView
            android:id="@+id/myinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:lines="6"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E91E63"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <EditText
            android:id="@+id/rname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/rid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/rpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pw"
            android:inputType="textPersonName"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8BC34A"
        android:visibility="invisible"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="회원정보"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img01" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="이선균" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            />
    </LinearLayout>


</FrameLayout>
</LinearLayout>